# onnx.cpp

./: CMakeLists.txt  README.md
include/: enums.hpp  utils.hpp
include/device/: cpu.hpp  device.hpp  device_cpu.hpp  device_hip.hpp  hip.hpp  sycl.hpp
include/graph/: graph.hpp  node.hpp
include/onnx/: onnx-operators.proto3.pb.h  onnx.proto3.pb.h
include/operator/: elementwise_operator.hpp  operator.hpp  operator_impl.hpp  operator_registry.hpp  operators.hpp
include/operator/cpu/: cpu_operators.hpp  elementwise_operator.hpp
include/parser/: npy_parser.hpp  onnx_parser.hpp
include/session/: session.hpp
include/tensor/: buffer.hpp  tensor.hpp  tensor_utils.hpp
include/types/: half.hpp  half_t.hpp
proto/: onnx-operators.proto
src/: utils.cpp
src/device/: device.cpp  device_hip.cpp  hip.cpp
src/graph/: graph.cpp  node.cpp
src/onnx/: onnx-operators.proto3.pb.cc  onnx.proto3.pb.cc
src/operator/: add_operator.cpp  conv_operator.cpp  div_operator.cpp  elementwise_operator.cpp  gather_operator.cpp  matmul_operator.cpp  maxpool_operator.cpp  mul_operator.cpp  operator.cpp  operator_registry.cpp  resize_operator.cpp  sigmoid_operator.cpp  slice_operator.cpp  softmax_operator.cpp  sub_operator.cpp
src/operator/cpu/: add_operator_impl.cpp  concat_operator_imp.cpp  const_operator_impl.cpp  conv_operator_impl.cpp  div_operator_impl.cpp  elementwise_operator.cpp  elementwise_operator_impl.cpp  gather_operator_impl.cpp  matmul_nbits_operator_impl.cpp  matmul_operator_impl.cpp  maxpool_operator_impl.cpp  mul_operator_impl.cpp  operator.cpp  reshape_operator.cpp  reshape_operator_impl.cpp  resize_operator_impl.cpp  shape_operator.cpp  shape_operator_impl.cpp  sigmoid_operator_impl.cpp  slice_operator_impl.cpp  softmax_operator_impl.cpp  split_operator.cpp  split_operator_impl.cpp  sub_operator_impl.cpp  transpose_operator_impl.cpp
src/operator/hip/: add_operator_impl.cpp  concat_operator_imp.cpp  const_operator_impl.cpp  constant_operator_impl.cpp  conv_operator_impl.cpp  div_operator_impl.cpp  gather_operator_impl.cpp  matmul_nbits_operator_impl.cpp  matmul_operator_impl.cpp  maxpool_operator_impl.cpp  mul_operator_impl.cpp  reshape_operator_impl.cpp  resize_operator_impl.cpp  shape_operator_impl.cpp  sigmoid_operator_impl.cpp  slice_operator_impl.cpp  softmax_operator_impl.cpp  split_operator_impl.cpp  sub_operator_impl.cpp  transpose_operator_impl.cpp
src/operator/main_operator/: add_operator.cpp  concat_operator.cpp  const_operator.cpp  conv_operator.cpp  div_operator.cpp  matmul_operator.cpp  softmax_operator.cpp  sub_operator.cpp  transpose_operator.cpp
src/operator/ops/: add_operator.cpp  concat_operator.cpp  const_operator.cpp  constant_operator.cpp  conv_operator.cpp  div_operator.cpp  gather_operator.cpp  matmul_nbits_operator.cpp  matmul_operator.cpp  maxpool_operator.cpp  mul_operator.cpp  reshape_operator.cpp  resize_operator.cpp  shape_operator.cpp  sigmoid_operator.cpp  slice_operator.cpp  softmax_operator.cpp  split_operator.cpp  sub_operator.cpp  transpose_operator.cpp
src/parser/: npy_parser.cpp  onnx_parser.cpp
src/session/: session.cpp
src/tensor/: buffer.cpp  cpu_buffer.cpp  hip_buffer.cpp  tensor.cpp  tensor_utils.cpp
tests/: fp16_test.cpp  hip_setup.cpp  int4_test.cpp  op_test0.cpp  op_test1.cpp  op_test2.cpp  op_test_cpu.cpp  op_test_hip.cpp  quantization_test.cpp
tests/quantization/: mat_mul_nbits.ipynb  model.layers.0.attn.qkv_proj.MatMul.weight_scales.npy  model.layers.0.input_layernorm.output_0.npy  model.layers.31.mlp.down_proj.MatMul.output_0.npy  model.layers.31.mlp.down_proj.MatMul.weight_scales.npy  model.layers.31.mlp.gate_proj.MatMul.weight_scales.npy  model.layers.31.mlp.up_proj.MatMul.weight_scales.npy  model.layers.31.post_attention_layernorm.output_0.npy  model.layers.32.final_norm_layernorm.output_0.npy
